Updated layout based on phills.me.uk changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,24 +7,23 @@
 
 	<meta name="author" content="Phill Sparks">
 	<meta name="dcterms.rights" content="Copyright (c) Phill Sparks. All rights reserved.">
-	<meta name="generator" content="Laravel/2.2.0-beta-1 (laravel.com)">
+	<meta name="generator" content="Jekyll 0.11.2">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
 
 	<link href="http://phills.me.uk/favicon.ico" type="image/x-icon" rel="shortcut icon">
 	<link href="http://phills.me.uk/css/phills.min.css" rel="stylesheet" type="text/css">
-	
-	<style type="text/css"></style>
 	
 	<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
 
-	<header><div class="container">
+	<header class="masthead"><div class="container">
 		<h1><a href="http://phills.me.uk/">Phill S<small>parks</small></a></h1>
 		<nav><ul class="menu">
 			<li><a href="http://phills.me.uk/about">About</a></li>
 			<li class="active"><a href="/">GitHub</a></li>
+			<li><a href="http://phills.me.uk/web">Web</a></li>
 		</ul><ul class="social pull-right">
 			<li class="delicious"><a href="http://delicious.com/P.Sparks" rel="me" title="Share with P.Sparks on Delicious">Delicious</a></li>
 			<li class="facebook"><a href="http://facebook.com/sparks.phill" rel="me" title="Find Phill Sparks on Facebook">Facebook</a></li>
@@ -36,12 +35,10 @@
 	</div></header>
 	
 	<div id="body" class="container">
-		<section>
-			{{ content }}
-		</section>
+		{{ content }}
 	</div>
 
-	<footer class="footer container" id="bottom">
+	<footer class="mastfoot container" id="bottom">
 		<p class="pull-right"><a href="#">Back to top</a></p>
 		<p>
 			&copy; <a href="http://phills.me.uk/" class="fn url">Phill Sparks</a>.
