Added "Fork me on GitHub" ribbon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,8 @@
 </head>
 <body>
 
+	<a href="https://github.com/sparksp"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub" /></a>
+
 	<header class="masthead"><div class="container">
 		<h1><a href="http://phills.me.uk/">Phill S<small>parks</small></a></h1>
 		<nav><ul class="menu">
