--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,9 @@
 
 	<meta name="author" content="Phill Sparks">
 	<meta name="dcterms.rights" content="Copyright (c) Phill Sparks. All rights reserved.">
-	<meta name="generator" content="Jekyll 0.11.2">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
 
-	<link href="http://phills.me.uk/favicon.ico" type="image/x-icon" rel="shortcut icon">
-	<link href="http://phills.me.uk/css/phills.min.css" rel="stylesheet" type="text/css">
+	<link href="css/phills.min.css" rel="stylesheet" type="text/css">
 	
 	<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
@@ -22,11 +20,11 @@
 
 	<header class="masthead"><div class="container">
 		<h1><a href="http://phills.me.uk/">Phill S<small>parks</small></a></h1>
-		<nav><ul class="menu">
+		<nav><ul class="nav nav-tabs pull-left">
 			<li><a href="http://phills.me.uk/about">About</a></li>
 			<li class="active"><a href="/">GitHub</a></li>
 			<li><a href="http://phills.me.uk/web">Web</a></li>
-		</ul><ul class="social pull-right">
+		</ul><ul class="nav social pull-right">
 			<li class="delicious"><a href="http://delicious.com/P.Sparks" rel="me" title="Share with P.Sparks on Delicious">Delicious</a></li>
 			<li class="facebook"><a href="http://facebook.com/sparks.phill" rel="me" title="Find Phill Sparks on Facebook">Facebook</a></li>
 			<li class="flickr"><a href="http://flickr.com/photos/webmilk" rel="me" title="Find webmilk on Flickr">Flickr</a></li>
