--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
 
 	<link href="css/phills.min.css" rel="stylesheet" type="text/css">
+	<link href="favicon.ico" type="image/x-icon" rel="shortcut icon">
 	
 	<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
