--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 		<nav><ul class="nav nav-tabs pull-left">
 			<li><a href="http://phills.me.uk/about">About</a></li>
 			<li class="active"><a href="/">GitHub</a></li>
-			<li><a href="http://phills.me.uk/web">Web</a></li>
+			<li><a href="http://phills.me.uk/projects">Projects</a></li>
 		</ul><ul class="nav social pull-right">
 			<li class="delicious"><a href="http://delicious.com/P.Sparks" rel="me" title="Share with P.Sparks on Delicious">Delicious</a></li>
 			<li class="facebook"><a href="http://facebook.com/sparks.phill" rel="me" title="Find Phill Sparks on Facebook">Facebook</a></li>
