--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
 	<link href="/css/phills.min.css" rel="stylesheet" type="text/css">
 	<link href="/css/pygments.css" rel="stylesheet" type="text/css">
 	<link href="/favicon.ico" type="image/x-icon" rel="shortcut icon">
+	<link href="/favicon.png" type="image/png" rel="shortcut icon">
 	
 	<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
